--- a/base_theme/static/base_theme/scss/scss/all.scss
+++ b/base_theme/static/base_theme/scss/scss/all.scss
@@ -42,22 +42,23 @@
 
 @import 'modules/print';
 /** @import 'modules/admin'; **/
-@import 'modules/sticky_footer';
+//@import 'modules/sticky_footer';
 @import 'modules/navigation/top_nav';
-@import 'modules/navigation/main_nav';
-@import 'modules/navigation/main_nav_dropdown';
+//@import 'modules/navigation/main_nav';
+//@import 'modules/navigation/main_nav_dropdown';
 @import 'modules/breadcrumb';
+@import 'modules/jumbotron';
 
 /*------------------------------------*\
     #LAYOUT
 \*------------------------------------*/
 
-@import 'layout/banner';
-@import 'layout/sidebar';
-@import 'layout/footer';
+//@import 'layout/banner';
+//@import 'layout/sidebar';
+//@import 'layout/footer';
 
 /*------------------------------------*\
     #STATE
 \*------------------------------------*/
 
-@import 'state/breakpoints';
+//@import 'state/breakpoints';
