--- a/base_theme/static/base_theme/scss/scss/modules/navigation/_top_nav.scss
+++ b/base_theme/static/base_theme/scss/scss/modules/navigation/_top_nav.scss
@@ -14,48 +14,9 @@
 \*------------------------------------*/
 
 #top-nav {
-	.navbar-left {
-		@include small {
-			width: 100%;
-		}
-		&.navbar-nav {
-			margin: 0px;
-		}
-	}
-	.navbar-right {
-		@include medium {
-		 display: none;
-	  }
-  }
 	.container {
-		background-color: #000;
-		height: 21px;
-		@include small {
-			padding: 0px;
-			height: 0px;
+		background-color: #fff;
 		}
-	}
-	form {
-		position: relative;
-	}
-	.navbar-nav {
-		li {
-			text-transform: uppercase;
-			list-style-type: none;
-		}
-		a {
-			padding: 1px 8px 0px 8px;
-			@include font-size(11px);
-			font-family: $helv;
-			font-weight: 700;
-			color: #fff;
-			font-family: $helv;
-			@include smoothing;
-			&:hover, &:focus {
-				background-color: #3d3d3d;
-			}
-		}
-	}
 }
 
 /*------------------------------------*\
@@ -64,22 +25,12 @@
 
 #top-nav {
 	.dropdown-menu {
-		margin-top: -2px;
 		background-color: $gray;
-		padding-top: 0px;
-		padding-bottom: 0px;
-		right: -1px;
 		li a {
-			padding-left: 8px;
-			padding-top: 5px;
-			padding-bottom: 5px;
 			&:hover, &:focus {
 				background-color: #999;
 				color: #fff;
 			}
-		}
-		.divider {
-			margin: 2px 0;
 		}
 	}
 	.dropdown-menu > li > a {
@@ -87,41 +38,3 @@
 	}
 }
 
-/*------------------------------------*\
-    #TOP-NAV LEFT BAR
-\*------------------------------------*/
-
-#top-nav__leftbar {
-	background-color: $red;
-	position: relative;
-	width: 375px;
-	margin-left: -115px;
-	height: 21px !important;
-	@include small {
-		height: 5px !important;
-		margin-left: 0px;
-		width: 100%;
-	}
-}
-
-/*------------------------------------*\
-    #RIGHT BLOCK
-\*------------------------------------*/
-
-#top-nav .nav.navbar-nav.navbar-right {
-	position: relative;
-	padding-top: 0px;
-	margin-top: 0px;
-	margin-right: -1px;
-}
-
-/*------------------------------------*\
-    #SEARCH-OPTION
-\*------------------------------------*/
-
-li#glyph-search {
-	height: 21px !important;
-  a {
-	  padding: 1px 8px 0px 8px !important;
-  }
-}
