--- a/base_theme/templates/base.html
+++ b/base_theme/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% block before_html %}{% endblock before_html %}<!DOCTYPE html>
 {% load staticfiles %}
 {% load fontawesome %}
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
