--- a/base_theme/static/base_theme/scss/scss/modules/navigation/_top_nav.scss
+++ b/base_theme/static/base_theme/scss/scss/modules/navigation/_top_nav.scss
@@ -38,3 +38,26 @@
 	}
 }
 
+.navbar-brand {
+	position: absolute;
+	width: 350px;
+	height: auto;
+	left: 0;
+	top: 0;
+	text-align: center;
+	margin: auto;
+	padding: 0px;
+}
+
+@media (min-width: 768px) {
+	.navbar-brand {
+		width: 100%;
+		padding: 20px;
+	}
+	.navbar-nav {
+		margin-top:	130px;
+	}
+	body {
+		margin-top:180px;
+	}
+}
